added few others logic